--- a/index.html
+++ b/index.html
@@ -1,39 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Complete Video Display</title>
+    <title>YouTube Video Embed</title>
     <style>
-        /* Responsive video container */
         .video-container {
+            position: relative;
+            width: 100%;
             max-width: 700px;
             margin: auto;
         }
 
-        video {
+        .thumbnail {
             width: 100%;
-            height: auto;
             border-radius: 10px;
+            cursor: pointer;
+        }
+
+        .iframe-video {
+            width: 100%;
+            height: 400px;
+            border-radius: 10px;
+            display: none;
         }
     </style>
+
+    <script>
+        function playVideo() {
+            document.getElementById("thumb").style.display = "none";
+            document.getElementById("ytvideo").style.display = "block";
+        }
+    </script>
 </head>
 <body>
 
-    <h2 style="text-align:center;">My Video Player</h2>
+    <h2 style="text-align:center;">My YouTube Video Player</h2>
 
     <div class="video-container">
-        <video 
-            controls 
-            autoplay 
-            loop 
-            muted 
-            poster="lpk.png">
-            
-            <source src="video.mp4" type="video/mp4">
-            <source src="video.webm" type="video/webm">
+        <!-- Thumbnail Image -->
+        <img id="thumb" 
+             src="lpk.png" 
+             class="thumbnail" 
+             onclick="playVideo()">
 
-            <!-- Fallback text -->
-            Your browser does not support the video tag.
-        </video>
+        <!-- YouTube Video -->
+        <iframe 
+            id="ytvideo"
+            class="iframe-video"
+            src="https://www.youtube.com/embed/yi9vJdFz3p8?autoplay=1&rel=0&vq=hd1080"
+            frameborder="0"
+            allow="autoplay; encrypted-media"
+            allowfullscreen>
+        </iframe>
     </div>
 
 </body>
