--- a/index.html
+++ b/index.html
@@ -1,46 +1,85 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>YouTube Video Embed</title>
+    <title>Enhanced YouTube Video Embed</title>
     <style>
+        body {
+            font-family: Arial, sans-serif;
+            background: #f4f4f4;
+            padding: 30px;
+        }
+
+        h2 {
+            text-align: center;
+        }
+
         .video-container {
             position: relative;
             width: 100%;
             max-width: 700px;
             margin: auto;
+            text-align: center;
         }
 
+        /* Thumbnail styling */
         .thumbnail {
             width: 100%;
-            border-radius: 10px;
+            border-radius: 14px;
             cursor: pointer;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            box-shadow: 0px 4px 20px rgba(0,0,0,0.25);
         }
 
+        /* Hover effect */
+        .thumbnail:hover {
+            transform: scale(1.03);
+            box-shadow: 0px 6px 30px rgba(0,0,0,0.35);
+        }
+
+        /* Text below thumbnail */
+        .click-text {
+            margin-top: 10px;
+            font-size: 18px;
+            color: #333;
+            font-weight: bold;
+            animation: fadein 1.5s ease-in-out;
+        }
+
+        /* YouTube iframe */
         .iframe-video {
             width: 100%;
             height: 400px;
-            border-radius: 10px;
+            border-radius: 14px;
             display: none;
+            animation: fadein 0.8s ease-in-out;
+        }
+
+        /* Smooth fade-in effect */
+        @keyframes fadein {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
     </style>
 
     <script>
         function playVideo() {
             document.getElementById("thumb").style.display = "none";
+            document.getElementById("text").style.display = "none";
             document.getElementById("ytvideo").style.display = "block";
         }
     </script>
 </head>
 <body>
 
-    <h2 style="text-align:center;">My YouTube Video Player</h2>
+    <h2>My YouTube Video Player</h2>
 
     <div class="video-container">
+        
         <!-- Thumbnail Image -->
-        <img id="thumb" 
-             src="lpk.png" 
-             class="thumbnail" 
-             onclick="playVideo()">
+        <img id="thumb" src="lpk.png" class="thumbnail" onclick="playVideo()">
+
+        <!-- Click message -->
+        <div id="text" class="click-text">Click on image to start playing the video</div>
 
         <!-- YouTube Video -->
         <iframe 
@@ -51,6 +90,7 @@
             allow="autoplay; encrypted-media"
             allowfullscreen>
         </iframe>
+
     </div>
 
 </body>
