--- a/index.html
+++ b/index.html
@@ -1,64 +1,107 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Enhanced YouTube Video Embed</title>
+    <title>Premium YouTube Video Embed</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background: #f4f4f4;
+            font-family: "Poppins", Arial, sans-serif;
+            background: linear-gradient(135deg,#0f0c29,#302b63,#24243e);
             padding: 30px;
+            color: white;
         }
 
         h2 {
             text-align: center;
+            font-size: 32px;
+            margin-bottom: 20px;
+            text-shadow: 0px 0px 10px #00eaff;
         }
 
-        .video-container {
-            position: relative;
-            width: 100%;
-            max-width: 700px;
+        /* GLASS CARD */
+        .video-wrapper {
+            max-width: 1100px;
             margin: auto;
-            text-align: center;
+            padding: 25px;
+            border-radius: 25px;
+            background: rgba(255, 255, 255, 0.10);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
+            backdrop-filter: blur(12px);
+            border: 1px solid rgba(255, 255, 255, 0.18);
+            animation: fadeSlideUp 1.5s ease;
         }
 
         /* Thumbnail styling */
         .thumbnail {
             width: 100%;
-            border-radius: 14px;
+            border-radius: 20px;
             cursor: pointer;
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            box-shadow: 0px 4px 20px rgba(0,0,0,0.25);
+            transition: transform 0.4s ease, box-shadow 0.4s ease;
+            box-shadow: 0px 0px 20px rgba(0,255,255,0.4);
         }
 
-        /* Hover effect */
-        .thumbnail:hover {
-            transform: scale(1.03);
-            box-shadow: 0px 6px 30px rgba(0,0,0,0.35);
+        /* Neon Hover */
+        @media (min-width: 768px) {
+            .thumbnail:hover {
+                transform: scale(1.04);
+                box-shadow: 0px 0px 35px rgba(0,255,255,0.8);
+            }
         }
 
-        /* Text below thumbnail */
+        /* Click Text */
         .click-text {
-            margin-top: 10px;
-            font-size: 18px;
-            color: #333;
-            font-weight: bold;
+            margin-top: 12px;
+            font-size: 20px;
+            text-align: center;
+            font-weight: 600;
+            color: #eafcff;
+            text-shadow: 0px 0px 10px cyan;
             animation: fadein 1.5s ease-in-out;
         }
 
-        /* YouTube iframe */
+        /* Responsive YouTube iframe */
         .iframe-video {
             width: 100%;
-            height: 400px;
-            border-radius: 14px;
+            height: 480px;
+            border-radius: 20px;
             display: none;
-            animation: fadein 0.8s ease-in-out;
+            border: 2px solid rgba(255,255,255,0.3);
+            box-shadow: 0px 0px 25px rgba(0,255,255,0.5);
+            animation: fadeZoom 0.8s ease-in-out;
         }
 
-        /* Smooth fade-in effect */
+        /* Mobile */
+        @media (max-width: 600px) {
+            .iframe-video {
+                height: 240px;
+            }
+            .click-text {
+                font-size: 16px;
+            }
+        }
+
+        /* Tablet */
+        @media (max-width: 900px) and (min-width: 601px) {
+            .iframe-video {
+                height: 360px;
+            }
+        }
+
+        /* ANIMATIONS */
         @keyframes fadein {
             from { opacity: 0; }
             to { opacity: 1; }
         }
+
+        @keyframes fadeSlideUp {
+            from { opacity: 0; transform: translateY(40px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        @keyframes fadeZoom {
+            from { opacity: 0; transform: scale(0.9); }
+            to { opacity: 1; transform: scale(1); }
+        }
+
     </style>
 
     <script>
@@ -71,17 +114,17 @@
 </head>
 <body>
 
-    <h2>My YouTube Video Player</h2>
+    <h2>My Premium YouTube Video Player</h2>
 
-    <div class="video-container">
-        
+    <div class="video-wrapper">
+
         <!-- Thumbnail Image -->
         <img id="thumb" src="lpk.png" class="thumbnail" onclick="playVideo()">
 
         <!-- Click message -->
-        <div id="text" class="click-text">Click on image to start playing the video</div>
+        <div id="text" class="click-text">✨ Click on the image to start playing the video ✨</div>
 
-        <!-- YouTube Video -->
+        <!-- YouTube Player -->
         <iframe 
             id="ytvideo"
             class="iframe-video"
